force-app/main/default/objects/Grille_Vattenfall__mdt/Grille_Vattenfall__mdt.object-meta.xml
<CustomObject>
    <label>Grille Vattenfall</label>
    <pluralLabel>Grilles Vattenfall</pluralLabel>
</CustomObject>