force-app/main/default/objects/Grille_Vattenfall__mdt/fields/Abonnement_Mois__c.field-meta.xml
<CustomField>
    <fullName>Abonnement_Mois__c</fullName>
    <label>Abonnement (€/Mois)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>