force-app/main/default/objects/Grille_Vattenfall__mdt/fields/Date_debut_maximale__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_maximale__c</fullName>
    <label>Date début maximale</label>
    <type>Date</type>
</CustomField>