force-app/main/default/objects/Grille_Vattenfall__mdt/fields/duree__c.field-meta.xml
<CustomField>
    <fullName>duree__c</fullName>
    <label>duree</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>